--- a/kb.html
+++ b/kb.html
@@ -24,7 +24,6 @@
             background-color: var(--light-bg);
             color: var(--dark-color);
             line-height: 1.6;
-            scroll-behavior: smooth;
         }
 
         /* Navigation */
@@ -63,33 +62,23 @@
             color: var(--primary-color);
         }
 
-        /* Hero Section - Optimized for 16:9 Aspect Ratio */
+        /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.6)), url('hero-bg.jpg'); 
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1545063914-a1a6ec821c88?auto=format&fit=crop&q=80&w=1000'); /* Placeholder for a temple background */
             background-size: cover;
-            background-position: center 25%;
-            background-attachment: fixed;
+            background-position: center;
             color: white;
             padding: 80px 5%;
             text-align: center;
-            width: 100%;
-            height: 56.25vw; /* Perfectly maintains 16:9 ratio */
-            min-height: 400px;
-            max-height: 80vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
         }
 
         .hero h1 {
-            font-size: clamp(2rem, 5vw, 3.5rem);
+            font-size: 3rem;
             margin-bottom: 10px;
-            text-shadow: 0 0 20px rgba(0,0,0,0.8), 0 0 10px rgba(255,107,0,0.4);
         }
 
         .hero p {
-            font-size: clamp(1rem, 2vw, 1.2rem);
+            font-size: 1.2rem;
             margin-bottom: 25px;
             opacity: 0.9;
         }
@@ -122,8 +111,6 @@
             margin-right: auto;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            position: relative;
-            z-index: 5;
         }
 
         .stat-item b {
@@ -164,7 +151,7 @@
         /* Video Grid */
         .video-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
         }
 
@@ -180,16 +167,108 @@
             transform: translateY(-5px);
         }
 
-        .iframe-wrapper {
+        .video-placeholder {
             width: 100%;
             aspect-ratio: 16/9;
-            background: #000;
+            background: #ddd;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .iframe-wrapper iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
+        .video-info {
+            padding: 15px;
         }
 
-        .video-info
+        footer {
+            text-align: center;
+            padding: 40px;
+            background: var(--dark-color);
+            color: white;
+            margin-top: 50px;
+        }
+
+        @media (max-width: 768px) {
+            .hero h1 { font-size: 2rem; }
+            .stats-bar { flex-direction: column; gap: 10px; text-align: center; }
+            .nav-links { display: none; } /* Could add a hamburger menu later */
+        }
+    </style>
+</head>
+<body>
+
+    <nav>
+        <div class="logo-area">
+            <img src="logo.png" alt="Logo">
+            <strong>Konkani Bhajans</strong>
+        </div>
+        <div class="nav-links">
+            <a href="#home">Home</a>
+            <a href="#videos">Videos</a>
+            <a href="mailto:your-email@example.com">Contact</a>
+        </div>
+    </nav>
+
+    <header class="hero" id="home">
+        <h1>Konkani Bhajans</h1>
+        <p>Evergreen Konkani Bhajans Forever</p>
+        <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">SUBSCRIBE NOW</a>
+    </header>
+
+    <div class="stats-bar">
+        <div class="stat-item"><b>924</b> Subscribers</div>
+        <div class="stat-item"><b>11+</b> Videos</div>
+        <div class="stat-item"><b>Free</b> Distribution</div>
+    </div>
+
+    <div class="container">
+        <div class="notification-card">
+            <h3>📢 Announcements</h3>
+            <ul>
+                <li>Release your own copyrighted bhajans through us for <b>free</b>.</li>
+                <li>We respect artist rights. Contact us for credits or content removal.</li>
+            </ul>
+        </div>
+
+        <h2 class="section-title" id="videos">Recent Uploads</h2>
+        
+        <div class="video-grid">
+            <div class="video-card">
+                <div class="video-placeholder">
+                    <p style="color:#888">YouTube Video Embed</p>
+                </div>
+                <div class="video-info">
+                    <h4>Bhajan Title One</h4>
+                    <p style="font-size: 0.8rem; color: #666;">Uploaded Recently</p>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-placeholder">
+                    <p style="color:#888">YouTube Video Embed</p>
+                </div>
+                <div class="video-info">
+                    <h4>Bhajan Title Two</h4>
+                    <p style="font-size: 0.8rem; color: #666;">Uploaded Recently</p>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-placeholder">
+                    <p style="color:#888">YouTube Video Embed</p>
+                </div>
+                <div class="video-info">
+                    <h4>Bhajan Title Three</h4>
+                    <p style="font-size: 0.8rem; color: #666;">Uploaded Recently</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2026 Konkani Bhajans Channel</p>
+        <p style="font-size: 0.7rem; opacity: 0.6; margin-top: 10px;">We do not claim ownership of the bhajans uploaded.</p>
+    </footer>
+
+</body>
+</html>
