--- a/kb.html
+++ b/kb.html
@@ -62,60 +62,84 @@
             color: var(--primary-color);
         }
 
-        /* Hero Section */
+        /* Hero Section with your Varaha Image */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1545063914-a1a6ec821c88?auto=format&fit=crop&q=80&w=1000'); /* Placeholder for a temple background */
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.7)), url('1000078840.jpg'); 
             background-size: cover;
             background-position: center;
+            background-attachment: fixed;
             color: white;
-            padding: 80px 5%;
+            padding: 100px 5%;
             text-align: center;
+            min-height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
         .hero h1 {
             font-size: 3rem;
             margin-bottom: 10px;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
         }
 
         .hero p {
             font-size: 1.2rem;
             margin-bottom: 25px;
             opacity: 0.9;
+            text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
         }
 
         .btn-subscribe {
             background-color: #ff0000; /* YouTube Red */
             color: white;
-            padding: 12px 30px;
+            padding: 14px 40px;
             text-decoration: none;
-            border-radius: 25px;
+            border-radius: 30px;
             font-weight: bold;
             display: inline-block;
-            transition: transform 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .btn-subscribe:hover {
             transform: scale(1.05);
+            box-shadow: 0 5px 15px rgba(255, 0, 0, 0.4);
         }
 
-        /* Stats Bar */
+        /* Stats Bar - Matches your screenshot */
         .stats-bar {
             display: flex;
             justify-content: center;
             gap: 50px;
-            padding: 20px;
+            padding: 30px;
             background: var(--white);
-            margin-top: -30px;
-            width: 80%;
-            margin-left: auto;
-            margin-right: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            margin: -50px auto 40px;
+            width: 85%;
+            max-width: 800px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            position: relative;
+            z-index: 5;
+        }
+
+        .stat-item {
+            text-align: center;
         }
 
         .stat-item b {
-            font-size: 1.5rem;
-            color: var(--primary-color);
+            display: block;
+            font-size: 1.8rem;
+            color: #f39c12; /* Matches the orange in your screenshot */
+            line-height: 1.2;
+        }
+
+        .stat-item span {
+            font-size: 0.9rem;
+            color: #7f8c8d;
+            font-weight: 500;
         }
 
         /* Main Content */
@@ -127,71 +151,89 @@
 
         .section-title {
             text-align: center;
-            margin-bottom: 30px;
-            position: relative;
-        }
-
-        .section-title::after {
-            content: '';
-            width: 50px;
-            height: 3px;
-            background: var(--primary-color);
-            display: block;
-            margin: 10px auto;
+            margin-bottom: 40px;
+            font-size: 2rem;
         }
 
         .notification-card {
             background: #fff3e0;
             border-left: 5px solid var(--primary-color);
-            padding: 20px;
-            border-radius: 5px;
+            padding: 25px;
+            border-radius: 8px;
             margin-bottom: 40px;
+        }
+
+        .notification-card h3 {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 10px;
         }
 
         /* Video Grid */
         .video-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 25px;
         }
 
         .video-card {
             background: var(--white);
-            border-radius: 10px;
+            border-radius: 12px;
             overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
             transition: transform 0.3s;
         }
 
         .video-card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-8px);
         }
 
-        .video-placeholder {
+        .iframe-container {
+            position: relative;
             width: 100%;
-            aspect-ratio: 16/9;
-            background: #ddd;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+            height: 0;
+            background: #000;
+        }
+
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
         }
 
         .video-info {
-            padding: 15px;
+            padding: 20px;
+        }
+
+        .video-info h4 {
+            font-size: 1.1rem;
+            margin-bottom: 5px;
         }
 
         footer {
             text-align: center;
-            padding: 40px;
+            padding: 50px 20px;
             background: var(--dark-color);
             color: white;
-            margin-top: 50px;
+            margin-top: 60px;
         }
 
         @media (max-width: 768px) {
-            .hero h1 { font-size: 2rem; }
-            .stats-bar { flex-direction: column; gap: 10px; text-align: center; }
-            .nav-links { display: none; } /* Could add a hamburger menu later */
+            .hero h1 { font-size: 2.2rem; }
+            .hero { padding: 80px 5%; }
+            .stats-bar { 
+                flex-direction: column; 
+                gap: 25px; 
+                text-align: center; 
+                width: 90%;
+                margin-top: -30px;
+            }
+            .nav-links { display: none; }
         }
     </style>
 </head>
@@ -205,20 +247,29 @@
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#videos">Videos</a>
-            <a href="mailto:your-email@example.com">Contact</a>
+            <a href="mailto:konkanibhajansofficial@gmail.com">Contact</a>
         </div>
     </nav>
 
     <header class="hero" id="home">
         <h1>Konkani Bhajans</h1>
         <p>Evergreen Konkani Bhajans Forever</p>
-        <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">SUBSCRIBE NOW</a>
+        <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">Subscribe Now</a>
     </header>
 
     <div class="stats-bar">
-        <div class="stat-item"><b>924</b> Subscribers</div>
-        <div class="stat-item"><b>11+</b> Videos</div>
-        <div class="stat-item"><b>Free</b> Distribution</div>
+        <div class="stat-item">
+            <b>924</b>
+            <span>Subscribers</span>
+        </div>
+        <div class="stat-item">
+            <b>11+</b>
+            <span>Videos</span>
+        </div>
+        <div class="stat-item">
+            <b>Free</b>
+            <span>Distribution</span>
+        </div>
     </div>
 
     <div class="container">
@@ -234,32 +285,22 @@
         
         <div class="video-grid">
             <div class="video-card">
-                <div class="video-placeholder">
-                    <p style="color:#888">YouTube Video Embed</p>
+                <div class="iframe-container">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
                 </div>
                 <div class="video-info">
                     <h4>Bhajan Title One</h4>
-                    <p style="font-size: 0.8rem; color: #666;">Uploaded Recently</p>
+                    <p style="font-size: 0.85rem; color: #7f8c8d;">Uploaded Recently</p>
                 </div>
             </div>
 
             <div class="video-card">
-                <div class="video-placeholder">
-                    <p style="color:#888">YouTube Video Embed</p>
+                <div class="iframe-container">
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
                 </div>
                 <div class="video-info">
                     <h4>Bhajan Title Two</h4>
-                    <p style="font-size: 0.8rem; color: #666;">Uploaded Recently</p>
-                </div>
-            </div>
-
-            <div class="video-card">
-                <div class="video-placeholder">
-                    <p style="color:#888">YouTube Video Embed</p>
-                </div>
-                <div class="video-info">
-                    <h4>Bhajan Title Three</h4>
-                    <p style="font-size: 0.8rem; color: #666;">Uploaded Recently</p>
+                    <p style="font-size: 0.85rem; color: #7f8c8d;">Uploaded Recently</p>
                 </div>
             </div>
         </div>
@@ -267,7 +308,7 @@
 
     <footer>
         <p>&copy; 2026 Konkani Bhajans Channel</p>
-        <p style="font-size: 0.7rem; opacity: 0.6; margin-top: 10px;">We do not claim ownership of the bhajans uploaded.</p>
+        <p style="font-size: 0.75rem; opacity: 0.7; margin-top: 15px;">We do not claim ownership of the bhajans uploaded. Dedicated to preserving Konkani culture.</p>
     </footer>
 
 </body>
