--- a/kb.html
+++ b/kb.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #ff6b00; /* Saffron Devotional Tone */
+            --primary-color: #ff6b00; 
             --dark-color: #2c3e50;
             --light-bg: #f9f9f9;
             --white: #ffffff;
@@ -50,21 +50,32 @@
             border-radius: 50%;
         }
 
-        .nav-links a {
-            text-decoration: none;
-            color: var(--dark-color);
-            margin-left: 20px;
-            font-weight: 500;
-            transition: color 0.3s;
-        }
-
-        .nav-links a:hover {
+        /* Scrolling Text Bar */
+        .scrolling-text {
+            background: #fff3e0;
             color: var(--primary-color);
+            padding: 10px 0;
+            font-weight: 600;
+            font-size: 0.9rem;
+            border-bottom: 1px solid #ffe0b2;
+            overflow: hidden;
+            white-space: nowrap;
         }
 
-        /* Hero Section with your Varaha Image */
+        .marquee {
+            display: inline-block;
+            padding-left: 100%;
+            animation: marquee 20s linear infinite;
+        }
+
+        @keyframes marquee {
+            0% { transform: translate(0, 0); }
+            100% { transform: translate(-100%, 0); }
+        }
+
+        /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.7)), url('1000078840.jpg'); 
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('1000078840.jpg'); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -88,28 +99,23 @@
             font-size: 1.2rem;
             margin-bottom: 25px;
             opacity: 0.9;
-            text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
         }
 
         .btn-subscribe {
-            background-color: #ff0000; /* YouTube Red */
+            background-color: #ff0000; 
             color: white;
             padding: 14px 40px;
             text-decoration: none;
             border-radius: 30px;
             font-weight: bold;
             display: inline-block;
-            transition: transform 0.3s, box-shadow 0.3s;
+            transition: transform 0.3s;
             text-transform: uppercase;
-            letter-spacing: 1px;
         }
 
-        .btn-subscribe:hover {
-            transform: scale(1.05);
-            box-shadow: 0 5px 15px rgba(255, 0, 0, 0.4);
-        }
+        .btn-subscribe:hover { transform: scale(1.05); }
 
-        /* Stats Bar - Matches your screenshot */
+        /* Stats Bar */
         .stats-bar {
             display: flex;
             justify-content: center;
@@ -125,52 +131,14 @@
             z-index: 5;
         }
 
-        .stat-item {
-            text-align: center;
-        }
+        .stat-item { text-align: center; }
+        .stat-item b { display: block; font-size: 1.8rem; color: #f39c12; }
+        .stat-item span { font-size: 0.9rem; color: #7f8c8d; }
 
-        .stat-item b {
-            display: block;
-            font-size: 1.8rem;
-            color: #f39c12; /* Matches the orange in your screenshot */
-            line-height: 1.2;
-        }
-
-        .stat-item span {
-            font-size: 0.9rem;
-            color: #7f8c8d;
-            font-weight: 500;
-        }
-
-        /* Main Content */
-        .container {
-            max-width: 1100px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        .section-title {
-            text-align: center;
-            margin-bottom: 40px;
-            font-size: 2rem;
-        }
-
-        .notification-card {
-            background: #fff3e0;
-            border-left: 5px solid var(--primary-color);
-            padding: 25px;
-            border-radius: 8px;
-            margin-bottom: 40px;
-        }
-
-        .notification-card h3 {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-bottom: 10px;
-        }
-
-        /* Video Grid */
+        /* Container & Grid */
+        .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
+        .section-title { text-align: center; margin-bottom: 40px; font-size: 2rem; }
+        
         .video-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -182,37 +150,17 @@
             border-radius: 12px;
             overflow: hidden;
             box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-            transition: transform 0.3s;
-        }
-
-        .video-card:hover {
-            transform: translateY(-8px);
         }
 
         .iframe-container {
             position: relative;
-            width: 100%;
-            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+            padding-bottom: 56.25%;
             height: 0;
-            background: #000;
         }
 
         .iframe-container iframe {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: 0;
-        }
-
-        .video-info {
-            padding: 20px;
-        }
-
-        .video-info h4 {
-            font-size: 1.1rem;
-            margin-bottom: 5px;
+            top: 0; left: 0; width: 100%; height: 100%; border: 0;
         }
 
         footer {
@@ -225,15 +173,7 @@
 
         @media (max-width: 768px) {
             .hero h1 { font-size: 2.2rem; }
-            .hero { padding: 80px 5%; }
-            .stats-bar { 
-                flex-direction: column; 
-                gap: 25px; 
-                text-align: center; 
-                width: 90%;
-                margin-top: -30px;
-            }
-            .nav-links { display: none; }
+            .stats-bar { flex-direction: column; gap: 20px; margin-top: -30px; }
         }
     </style>
 </head>
@@ -245,62 +185,37 @@
             <strong>Konkani Bhajans</strong>
         </div>
         <div class="nav-links">
-            <a href="#home">Home</a>
-            <a href="#videos">Videos</a>
-            <a href="mailto:konkanibhajansofficial@gmail.com">Contact</a>
+            <a href="mailto:konkanibhajansofficial@gmail.com" style="text-decoration:none; color:var(--dark-color); font-weight:600;">Contact</a>
         </div>
     </nav>
 
-    <header class="hero" id="home">
+    <div class="scrolling-text">
+        <div class="marquee">
+            Welcome to Konkani Bhajans Official — Subscribe for Evergreen Devotional Songs — Share your Bhajans with us for Free Distribution — New Temple Videos Uploaded Weekly!
+        </div>
+    </div>
+
+    <header class="hero">
         <h1>Konkani Bhajans</h1>
         <p>Evergreen Konkani Bhajans Forever</p>
         <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">Subscribe Now</a>
     </header>
 
     <div class="stats-bar">
-        <div class="stat-item">
-            <b>924</b>
-            <span>Subscribers</span>
-        </div>
-        <div class="stat-item">
-            <b>11+</b>
-            <span>Videos</span>
-        </div>
-        <div class="stat-item">
-            <b>Free</b>
-            <span>Distribution</span>
-        </div>
+        <div class="stat-item"><b>924</b><span>Subscribers</span></div>
+        <div class="stat-item"><b>11+</b><span>Videos</span></div>
+        <div class="stat-item"><b>Free</b><span>Distribution</span></div>
     </div>
 
     <div class="container">
-        <div class="notification-card">
-            <h3>📢 Announcements</h3>
-            <ul>
-                <li>Release your own copyrighted bhajans through us for <b>free</b>.</li>
-                <li>We respect artist rights. Contact us for credits or content removal.</li>
-            </ul>
-        </div>
-
-        <h2 class="section-title" id="videos">Recent Uploads</h2>
-        
+        <h2 class="section-title">Recent Uploads</h2>
         <div class="video-grid">
             <div class="video-card">
                 <div class="iframe-container">
                     <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
                 </div>
-                <div class="video-info">
-                    <h4>Bhajan Title One</h4>
-                    <p style="font-size: 0.85rem; color: #7f8c8d;">Uploaded Recently</p>
-                </div>
-            </div>
-
-            <div class="video-card">
-                <div class="iframe-container">
-                    <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
-                </div>
-                <div class="video-info">
-                    <h4>Bhajan Title Two</h4>
-                    <p style="font-size: 0.85rem; color: #7f8c8d;">Uploaded Recently</p>
+                <div class="video-info" style="padding:20px;">
+                    <h4>Traditional Konkani Bhajan</h4>
                 </div>
             </div>
         </div>
@@ -308,7 +223,6 @@
 
     <footer>
         <p>&copy; 2026 Konkani Bhajans Channel</p>
-        <p style="font-size: 0.75rem; opacity: 0.7; margin-top: 15px;">We do not claim ownership of the bhajans uploaded. Dedicated to preserving Konkani culture.</p>
     </footer>
 
 </body>
