--- a/kb.html
+++ b/kb.html
@@ -75,7 +75,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('1000078840.jpg'); 
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('hero-bg.jpg'); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
