--- a/kb.html
+++ b/kb.html
@@ -24,6 +24,7 @@
             background-color: var(--light-bg);
             color: var(--dark-color);
             line-height: 1.6;
+            overflow-x: hidden;
         }
 
         /* Navigation */
@@ -50,29 +51,6 @@
             border-radius: 50%;
         }
 
-        /* Scrolling Text Bar */
-        .scrolling-text {
-            background: #fff3e0;
-            color: var(--primary-color);
-            padding: 10px 0;
-            font-weight: 600;
-            font-size: 0.9rem;
-            border-bottom: 1px solid #ffe0b2;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-
-        .marquee {
-            display: inline-block;
-            padding-left: 100%;
-            animation: marquee 20s linear infinite;
-        }
-
-        @keyframes marquee {
-            0% { transform: translate(0, 0); }
-            100% { transform: translate(-100%, 0); }
-        }
-
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('hero-bg.jpg'); 
@@ -90,30 +68,46 @@
         }
 
         .hero h1 {
-            font-size: 3rem;
+            font-size: clamp(2.2rem, 5vw, 3rem);
             margin-bottom: 10px;
             text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
         }
 
         .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 25px;
+            font-size: clamp(1rem, 2vw, 1.2rem);
+            margin-bottom: 30px;
             opacity: 0.9;
+        }
+
+        .btn-group {
+            display: flex;
+            gap: 15px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .btn-subscribe {
             background-color: #ff0000; 
             color: white;
-            padding: 14px 40px;
+            padding: 14px 35px;
             text-decoration: none;
             border-radius: 30px;
             font-weight: bold;
-            display: inline-block;
             transition: transform 0.3s;
             text-transform: uppercase;
         }
 
-        .btn-subscribe:hover { transform: scale(1.05); }
+        .btn-contact {
+            background-color: var(--white);
+            color: var(--dark-color);
+            padding: 14px 35px;
+            text-decoration: none;
+            border-radius: 30px;
+            font-weight: bold;
+            transition: transform 0.3s;
+        }
+
+        .btn-subscribe:hover, .btn-contact:hover { transform: scale(1.05); }
 
         /* Stats Bar */
         .stats-bar {
@@ -133,11 +127,36 @@
 
         .stat-item { text-align: center; }
         .stat-item b { display: block; font-size: 1.8rem; color: #f39c12; }
-        .stat-item span { font-size: 0.9rem; color: #7f8c8d; }
+        .stat-item span { font-size: 0.9rem; color: #7f8c8d; font-weight: 600; }
 
-        /* Container & Grid */
+        /* Marquee Bar */
+        .marquee-container {
+            background: #fff3e0;
+            color: var(--primary-color);
+            padding: 12px 0;
+            font-weight: 600;
+            font-size: 0.95rem;
+            border-top: 2px solid #ffe0b2;
+            border-bottom: 2px solid #ffe0b2;
+            overflow: hidden;
+            width: 100%;
+            margin-bottom: 30px;
+        }
+
+        .marquee-content {
+            display: inline-block;
+            white-space: nowrap;
+            padding-left: 100%;
+            animation: marquee 35s linear infinite;
+        }
+
+        @keyframes marquee {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-100%); }
+        }
+
         .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
-        .section-title { text-align: center; margin-bottom: 40px; font-size: 2rem; }
+        .section-title { text-align: center; margin-bottom: 20px; font-size: 2rem; }
         
         .video-grid {
             display: grid;
@@ -156,6 +175,7 @@
             position: relative;
             padding-bottom: 56.25%;
             height: 0;
+            background: #000;
         }
 
         .iframe-container iframe {
@@ -173,7 +193,7 @@
 
         @media (max-width: 768px) {
             .hero h1 { font-size: 2.2rem; }
-            .stats-bar { flex-direction: column; gap: 20px; margin-top: -30px; }
+            .stats-bar { flex-direction: column; gap: 20px; margin-top: -30px; width: 90%; }
         }
     </style>
 </head>
@@ -189,16 +209,13 @@
         </div>
     </nav>
 
-    <div class="scrolling-text">
-        <div class="marquee">
-            Welcome to Konkani Bhajans Official — Subscribe for Evergreen Devotional Songs — Share your Bhajans with us for Free Distribution — New Temple Videos Uploaded Weekly!
-        </div>
-    </div>
-
     <header class="hero">
         <h1>Konkani Bhajans</h1>
         <p>Evergreen Konkani Bhajans Forever</p>
-        <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">Subscribe Now</a>
+        <div class="btn-group">
+            <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">Subscribe Now</a>
+            <a href="mailto:konkanibhajansofficial@gmail.com" class="btn-contact">Share Your Bhajans</a>
+        </div>
     </header>
 
     <div class="stats-bar">
@@ -208,6 +225,12 @@
     </div>
 
     <div class="container">
+        <div class="marquee-container">
+            <div class="marquee-content">
+                Welcome to the Konkani Bhajans Webpage | If you want to share your bhajans, feel free to contact us | The Bhajans uploaded are not copyrighted by us and we do not claim any ownership over them | In case of removal, please contact us via email at konkanibhajansofficial@gmail.com
+            </div>
+        </div>
+
         <h2 class="section-title">Recent Uploads</h2>
         <div class="video-grid">
             <div class="video-card">
@@ -215,14 +238,15 @@
                     <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
                 </div>
                 <div class="video-info" style="padding:20px;">
-                    <h4>Traditional Konkani Bhajan</h4>
+                    <h4>Sacred Konkani Bhajan</h4>
                 </div>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2026 Konkani Bhajans Channel</p>
+        <p>Conserving our culture and language</p>
+        <p style="margin-top: 10px; font-size: 0.9rem; opacity: 0.7;">&copy; 2026 Konkani Bhajans Channel</p>
     </footer>
 
 </body>
